k8s-manifests/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momo-frontend-release-name
  namespace: default
  labels:
    app: frontend
    app.kubernetes.io/name: momo-frontend
    app.kubernetes.io/instance: "release-name"
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: "Helm"
    helm.sh/chart: "frontend-1.0.0"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: momo-store
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        prometheus.io/port: "9113"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: frontend
          image: "gitlab.vnaz.site:5050/musasy/momo-store/momo-frontend:latest"
          imagePullPolicy: Always
          ports:
            - name: frontend
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 1
            failureThreshold: 6
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/momo-store.conf
              subPath: momo-store.conf
              readOnly: true
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:0.11
          args:
            - '-nginx.scrape-uri=http://localhost:8080/nginx_status'
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 9113
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: momo-store.conf
                path: momo-store.conf
      imagePullSecrets:
        - name: docker-config-secret
